@@ -7,6 +7,7 @@ Changes in Release 2.2.0
 [JOST-43] - Method setExpression() of class ExpressionType doesn't work
 [JOST-44] - Method getAttributeValues() of AttributeType should return List<AttributeValueType>
 [JOST-45] - Missing StatusMessage and Description XACML object implementations
+[JOST-51] - Issue with multiple obligation handlers
 
 * Correct how XML boolean values are dealt with in XACML objects
 * Deprecate FileBackedHTTP, Filesystem, and HTTP metadata providers in favor of new ResourceBacked metadata provider.
